fixed title overflow on door page

--- a/css/door.css
+++ b/css/door.css
@@ -60,6 +60,12 @@ main > div > iframe {
 #videoDescribtion {
     margin-right: 20%;
 }
+
+#videoTitle {
+  margin-right: 20%;
+}
+
+
 footer {
   position: fixed;
   left: 0;
